fixed image overflow on technology and crew

--- a/src/app/Components/crew-page/crew-page.component.scss
+++ b/src/app/Components/crew-page/crew-page.component.scss
@@ -33,13 +33,14 @@ h4 {
 }
 
 .imgContainer {
-    max-height: 30vh;
+    //max-height: 30vh;
     text-align: center;
 }
 
 img {
     border-bottom: solid 1px grey;
-    height: 100%;
+    //height: 100%;
+    height: 40vh;
     max-height: 290px;
 }
 
