--- a/src/app/Components/nav-bar/nav-bar.component.scss
+++ b/src/app/Components/nav-bar/nav-bar.component.scss
@@ -128,7 +128,7 @@ li:hover {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
-        background-color: #0b0d17;
+        //background-color: #0b0d17;
         width: 100%;
         padding: 0;
     }
