--- a/src/app/Components/technology-page/technology-page.component.scss
+++ b/src/app/Components/technology-page/technology-page.component.scss
@@ -96,11 +96,13 @@ h5 {
 
 .imgContainer {
     text-align: center;
-    max-height: 35vh;
+    //max-height: 35vh;
 }
 
 img {
-    height: 100%;
+    height: 40vh;
+    width: 40vh;
+    //height: 100%;
     max-height: 335px;
 }
 
